--- a/src/core/styles/components/navdrawer/_navdrawer-component.scss
+++ b/src/core/styles/components/navdrawer/_navdrawer-component.scss
@@ -4,107 +4,108 @@ $navdrawer-pin-collapsed-padding: 0;
 $overlay-color: rgba(0, 0, 0, .25);
 
 @include b(igx-nav-drawer) {
-    position: fixed;
-    width: em(242px);
-    height: 100%;
-    max-width: 90%;
-    min-height: 100%;
-    overflow-x: hidden;
-    background-color: $white;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 999;
-    transition: width, transform;
-    transition-duration: .3s, .3s;
-    transition-timing-function: $ease-out-quad, $ease-out-quad;
-    transition-delay: 0s, 0s;
-    box-shadow: rgba(0, 0, 0, .2);
+    // Main aside element
+    @include e(aside) {
+        position: fixed;
+        width: em(242px);
+        height: 100%;
+        max-width: 90%;
+        min-height: 100%;
+        overflow-x: hidden;
+        background-color: $white;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        z-index: 999;
+        transition: width, transform;
+        transition-duration: .3s, .3s;
+        transition-timing-function: $ease-out-quad, $ease-out-quad;
+        transition-delay: 0s, 0s;
+        box-shadow: rgba(0, 0, 0, .2);
 
-    &.collapsed {
+        &.panning {
+            overflow-x: hidden;
+            transition: none;
+        }
+    }
+
+    @include e(aside, collapsed) {
         transform: translate3d(-300px, 0, 0);
         box-shadow: none;
 
-        &.right {
+        &.igx-nav-drawer__aside--right {
             transform: translate3d(300px, 0, 0);
             box-shadow: none;
         }
     }
 
-    &.right {
+    @include e(aside, right) {
         left: auto;
         right: 0;
     }
 
-    &.mini {
+    @include e(aside, mini) {
         width: 60px;
         transition-duration: .2s, .2s;
     }
 
-    &.pinned {
+    @include e(aside, pinned) {
         position: relative;
         max-width: 100%;
         box-shadow: none;
         z-index: 0;
+
+        &.igx-nav-drawer__aside--collapsed {
+            transform: none;
+            width: 0;
+            padding: $navdrawer-pin-collapsed-padding;
+            overflow: hidden;
+        }
     }
 
-    &.pinned.collapsed {
-        transform: none;
-        width: 0;
-        padding: $navdrawer-pin-collapsed-padding;
-        overflow: hidden;
+    // Overlay
+    @include e(overlay) {
+        opacity: 1;
+        background-color: $overlay-color;
+        transition: opacity, visibility;
+        transition-duration: .25s, .25s;
+        transition-timing-function: ease-in, step-start;
+        transition-delay: 0s, 0s;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        visibility: visible;
+        z-index: 999;
+
+        &.panning {
+            transform: translate3d(
+                0,
+                0,
+                0
+            );
+            transition: none;
+
+            &.igx-nav-drawer__overlay--hidden {
+                /* must be visible duruing pan.. */
+                visibility: visible;
+            }
+        }
     }
 
-    &.panning {
-        overflow-x: hidden;
-        transition: none;
-    }
-}
-
-.style-dummy {
-    height: 0;
-    background: none;
-    box-shadow: none;
-    transition: none;
-    visibility: hidden;
-}
-
-// Navigation Drawer overlay styles
-.igx-nav-drawer-overlay {
-    opacity: 1;
-    background-color: $overlay-color;
-    transition: opacity, visibility;
-    transition-duration: .25s, .25s;
-    transition-timing-function: ease-in, step-start;
-    transition-delay: 0s, 0s;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    visibility: visible;
-    z-index: 999;
-
-    &.hidden {
+    @include e(overlay, hidden) {
         transition-timing-function: ease-in-out, step-end;
         visibility: hidden;
         opacity: 0;
     }
 
-    &.pinned {
-        display: none;
-    }
-
-    &.panning {
-        transform: translate3d(
-            0,
-            0,
-            0
-        );
+     // Style Dummy(hidden) used for measures
+     @include e(style-dummy) {
+        height: 0;
+        background: none;
+        box-shadow: none;
         transition: none;
-
-        &.hidden {
-            visibility: visible;
-        }
-    }
+        visibility: hidden;
+     }
 }
