--- a/src/navigation-drawer/navigation-drawer.component.html
+++ b/src/navigation-drawer/navigation-drawer.component.html
@@ -1,7 +1,15 @@
-<div class="igx-nav-drawer-overlay" [class.pinned]="pin" [class.hidden]="!isOpen" (click)="close(true)"></div>
-<aside class="igx-nav-drawer" role="navigation" 
-    [class.collapsed]="!_hasMimiTempl && !isOpen" [class.mini]="_hasMimiTempl && !isOpen" [class.pinned]="pin" [class.right]="position == 'right'">
-    
+<div [hidden]="pin"
+    class="igx-nav-drawer__overlay"
+    [class.igx-nav-drawer__overlay--hidden]="!isOpen"
+    (click)="close(true)">
+</div>
+<aside role="navigation"
+    class="igx-nav-drawer__aside"
+    [class.igx-nav-drawer__aside--collapsed]="!_hasMimiTempl && !isOpen"
+    [class.igx-nav-drawer__aside--mini]="_hasMimiTempl && !isOpen"
+    [class.igx-nav-drawer__aside--pinned]="pin"
+    [class.igx-nav-drawer__aside--right]="position == 'right'">
+
     <div class="" [hidden]="!isOpen && _hasMimiTempl">
         <ng-content select=".igx-drawer-content"></ng-content>
     </div>                
@@ -9,4 +17,4 @@
         <ng-content select=".igx-drawer-mini-content"></ng-content>
     </div>
 </aside>
-<div class="style-dummy"></div>
+<div class="igx-nav-drawer__style-dummy"></div>
