fix(nav-drawer): class prop, remove fit, mini template in demos

--- a/demos/app/app.component.html
+++ b/demos/app/app.component.html
@@ -157,6 +157,51 @@
                 </span>
             </nav>
         </div>
+        <!-- <div class="igx-drawer-mini-content">
+            <nav class="nav">
+                <span class="nav-item header">Components</span>
+
+                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/avatar">
+                    <igx-icon fontSet="material" name="account_circle"></igx-icon>
+                </span>
+
+                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/badge">
+                    <igx-icon fontSet="material" name="error"></igx-icon>
+                </span>
+
+                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/buttonGroup">
+                    <igx-icon fontSet="material" name="group_work"></igx-icon>
+                </span>
+
+                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/calendar">
+                    <igx-icon fontSet="material" name="event"></igx-icon>
+                </span>
+
+                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/card">
+                    <igx-icon fontSet="material" name="home"></igx-icon>
+                </span>
+
+                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/carousel">
+                    <igx-icon fontSet="material" name="view_carousel"></igx-icon>
+                </span>
+
+                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/datePicker">
+                    <igx-icon fontSet="material" name="date_range"></igx-icon>
+                </span>
+
+                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/grid">
+                    <igx-icon fontSet="material" name="view_column"></igx-icon>
+                </span>
+
+                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/gridPerformance">
+                    <igx-icon fontSet="material" name="view_column"></igx-icon>
+                </span>
+
+                <span class="nav-item" [routerLinkActive]="'active'" routerLink="/navdrawer">
+                    <igx-icon fontSet="material" name="menu"></igx-icon>
+                </span>
+            </nav>
+        </div> -->
     </igx-nav-drawer>
     <div class="content">
         <router-outlet></router-outlet>
