--- a/src/core/styles/components/navdrawer/_navdrawer-theme.scss
+++ b/src/core/styles/components/navdrawer/_navdrawer-theme.scss
@@ -1,13 +1,101 @@
 $component-name: 'igx-navdrawer';
-
 $components: register-component($components, #{$component-name});
 
-@function igx-navdrawer-theme() {
-    @return ();
+
+@function igx-navdrawer-theme(
+    $background-color: null,
+    $overlay-background: null,
+    $border-color: null
+) {
+    @return (
+        background-color: $background-color,
+        overlay-background: $overlay-background,
+        border-color: $border-color
+    );
 }
 
 @mixin igx-navdrawer($theme, $palette: $default-palette) {
-    $default-theme: igx-navdrawer-theme();
+    $default-theme: igx-navdrawer-theme(
+        $background-color: $white,
+        $overlay-background: rgba(0, 0, 0, .25),
+        $border-color: rgba(0, 0, 0, .14)
+    );
+
     $this: extend($default-theme, $theme);
-    $navdrawer-pin-collapsed-padding: 0;
+
+    $ease-in-bezier: cubic-bezier(.25, .46, .45, .94);
+    $ease-out-bezier: $ease-in-bezier;
+
+    %adide {
+        position: fixed;
+        width: rem(242px);
+        height: 100%;
+        max-width: 90%;
+        min-height: 100%;
+        overflow-x: hidden;
+        background-color: map-get($this, 'background-color');
+        top: 0;
+        bottom: 0;
+        left: 0;
+        z-index: 999;
+        transition: width, transform;
+        transition-duration: .3s, .3s;
+        transition-timing-function: $ease-in-bezier, $ease-out-bezier;
+        transition-delay: 0s, 0s;
+        box-shadow: $elevate-4;
+        border-right: 1px solid map-get($this, 'border-color');
+    }
+
+    %aside--pinned {
+        position: relative;
+        max-width: 100%;
+        box-shadow: none;
+        z-index: 0;
+    }
+
+    %igx-nav-drawer__aside--collapsed {
+        transform: none;
+        width: 0;
+        overflow: hidden;
+    }
+
+    %aside--collapsed {
+        transform: translate3d(-300px, 0, 0);
+        box-shadow: none;
+    }
+
+    %aside--right {
+        left: auto;
+        right: 0;
+        border-right: none;
+        border-left: 1px solid map-get($this, 'border-color');
+    }
+
+    %aside--mini {
+        width: rem(60px);
+        transition-duration: .2s, .2s;
+    }
+
+    %overlay {
+        opacity: 1;
+        background-color: map-get($this, 'overlay-background');
+        transition: opacity, visibility;
+        transition-duration: .25s, .25s;
+        transition-timing-function: ease-in, step-start;
+        transition-delay: 0s, 0s;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        visibility: visible;
+        z-index: 999;
+    }
+
+    %overlay--hidden {
+        transition-timing-function: ease-in-out, step-end;
+        visibility: hidden;
+        opacity: 0;
+    }
 }
+
