--- a/src/core/styles/components/grid-filtering/_grid-filtering-component.scss
+++ b/src/core/styles/components/grid-filtering/_grid-filtering-component.scss
@@ -1,15 +1,29 @@
 @include b(igx-filtering) {
     @extend %igx-filtering-display !optional;
+
     @include e(toggle) {
         @extend %igx-filtering-toggle !optional;
+
+        &:hover {
+            @extend %igx-filtering-toggle--hover !optional;
+        }
     }
+
     @include e(toggle, $m: active) {
+        @extend %igx-filtering-toggle !optional;
         @extend %igx-filtering-toggle--active !optional;
     }
+
     @include e(toggle, $m: filtered) {
+        @extend %igx-filtering-toggle !optional;
         @extend %igx-filtering-toggle--filtered !optional;
     }
+
     @include e(options) {
-        @extend %igx-filtering-options !optional;
+        @extend %igx-filtering-menu !optional;
+    }
+
+    @include e(options-bgroup) {
+        @extend %igx-filtering-menu-buttons !optional;
     }
 }
