--- a/src/core/styles/components/badge/_badge-theme.scss
+++ b/src/core/styles/components/badge/_badge-theme.scss
@@ -3,32 +3,38 @@ $component-name: 'igx-badge';
 $components: register-component($components, #{$component-name});
 
 @function igx-badge-theme(
-    $color: null,
+    $icon-color: null,
+    $text-color: null,
     $border-color: null,
     $border-radius: null,
     $background-color: null,
-    $disableShadow: true,
-    $disableBorder: true
+    $disable-shadow: true,
+    $disable-border: true
 ) {
 
-    @if not($color) and $background-color {
-        $color: text-contrast($background-color);
+    @if not($icon-color) and $background-color {
+        $icon-color: text-contrast($background-color);
+    }
+
+    @if not($text-color) and $background-color {
+        $text-color: text-contrast($background-color);
     }
 
     @return (
-        color: $color,
+        icon-color: $icon-color,
+        text-color: $text-color,
         border-color: $border-color,
         border-radius: $border-radius,
         background-color: $background-color,
-        disableShadow: $disableShadow,
-        disableBorder: $disableBorder
+        disable-shadow: $disable-shadow,
+        disable-border: $disable-border
     );
 }
 
 @mixin igx-badge($theme, $palette: $default-palette) {
     $default-theme: igx-badge-theme(
-        // This variables should be defined in the theme function above with :null value and in return statement.
-        $color: $white,
+        $icon-color: $white,
+        $text-color: $white,
         $border-color: $white,
         $background-color: igx-color($palette, accent, 500),
         $border-radius: 4px
@@ -38,11 +44,15 @@ $components: register-component($components, #{$component-name});
 
     $badge-width: 22px !default;
     $badge-height: $badge-width !default;
+
     $badge-border-radius-circle: $badge-width / 2 !default;
-    $badge-font-size: em(10px) !default;
+
+    $badge-font-size: rem(11px) !default;
     $badge-font-weight: 600 !default;
     $badge-line-height: 2px !default;
-    $badge-icon-font-size: em(11px, 16px) !default;
+
+    $badge-icon-font-size: rem(12px) !default;
+    
     $badge-value-padding: 4px !default;
     $badge-info-background: igx-color($palette, 'primary');
     $badge-warn-background: igx-color($palette, 'warn');
@@ -53,11 +63,11 @@ $components: register-component($components, #{$component-name});
     $border-width: 1px;
     $border-type: solid;
 
-    @if map-get($this, 'disableShadow') {
+    @if map-get($this, 'disable-shadow') {
         $badge-shadow: none;
     }
 
-    @if map-get($this, 'disableBorder') {
+    @if map-get($this, 'disable-border') {
         $border-width: 0;
     }
 
@@ -74,7 +84,7 @@ $components: register-component($components, #{$component-name});
         height: $badge-height;
         font-size: $badge-font-size;
         font-weight: $badge-font-weight;
-        color: map-get($this, 'color');
+        color: map-get($this, 'text-color');
         background-color: map-get($this, 'background-color');
         line-height: $badge-line-height;
         border: $border-width $border-type map-get($this, 'border-color');
@@ -83,6 +93,7 @@ $components: register-component($components, #{$component-name});
         overflow: hidden;
 
         i {
+            color: map-get($this, 'icon-color');
             font-size: $badge-icon-font-size;
             font-weight: $badge-font-weight;
         }
