--- a/src/core/styles/components/button/_button-theme.scss
+++ b/src/core/styles/components/button/_button-theme.scss
@@ -147,8 +147,8 @@ $components: register-component($components, #{$component-name});
         // Flat button
         $flat-text-color: igx-color($palette, accent, 500),
         $flat-background: transparent,
-        $flat-hover-background: rgba(0, 0, 0, .24),
-        $flat-hover-text-color: null,
+        $flat-hover-background: rgba(0, 0, 0, .05),
+        $flat-hover-text-color: igx-color($palette, accent, 500),
         $flat-focus-background: igx-color($palette, grays, 400),
         $flat-focus-text-color: igx-color($palette, grays, 800),
         // Raised Button
