fix(toggle): toggle always showing
Add hidden styles so toggle can hide

--- a/src/core/styles/themes/_core.scss
+++ b/src/core/styles/themes/_core.scss
@@ -6,6 +6,7 @@
 @import '../components/_common/igx-control';
 @import '../components/_common/igx-display-container';
 @import '../components/_common/igx-vhelper';
+@import '../components/_common/igx-toggle';
 
 @import '../components/avatar/avatar-component';
 @import '../components/badge/badge-component';
